# qNetVO

./: .gitignore  CITATION.bib  NOTICE.txt  README.md  ci_environment.yml  contributing.html  environment.yml  genindex.html  index.html  objects.inv  optimization.html  requirements.txt  search.html  searchindex.js  setup.cfg  test_requirements.txt  utilities.html
QNetOptimizer/: __init__.py  ansatz_library.py  ansatzes.py  gradient_descent.py  information.py  network_ansatz.py  postprocessing.py  utilities.py
_modules/: index.html
_sources/: index.rst.txt  utilities.rst.txt
_static/: documentation_options.js
cost/: entropic_quantities.html  index.html  linear_inequalities.html  magic_squares_game.html  negativity.html  qnodes.html
demos/: chsh_nonlocality_optimization.ipynb  magic_squares_game_optimization.ipynb  mermin-klyshko_nonlocality_optimization.ipynb  noisy_bilocal_network_optimization.ipynb  parallelizing_remote_qnode_execution.ipynb  teleportation.ipynb  training_a_teleportation_protocol.ipynb  training_locc_protocols.ipynb
docs/: environment.yml  requirements.txt
notebook/: bilocal_network_optimization.ipynb  bipartite_nonsignaling_I3322_violations_by_dimension.ipynb  chsh_natural_gradient.ipynb  chsh_optimization.ipynb  chsh_optimization_tb.ipynb  communication_value_optimization.ipynb  context.py  dimensionality-witness-optimization.ipynb  linear_inequality_multiple_access_channel.ipynb  magic_squares_vqo.ipynb  mermin-klyshko_inequality_optimization.ipynb  multiple_access_channel_linear_inequalities.ipynb  noisy_n-local_chain_network.ipynb  (+6 more)
(+388 files in other folders)
