[metadata]
name = qNetVO
version = 0.1.0
author = Brian Doolittle and Tom Bromley
author_email = brian.d.doolittle@gmail.com
description = The Quantum Network Variational Optimizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChitambarLab/qNetVO
project_urls =
    Bug Tracker = https://github.com/ChitambarLab/qNetVO
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    pennylane==0.21

[options.packages.find]
where = src